[package]
name = "messy_json"
version = "0.1.0"
authors = ["Francis Le Roy <francis.leroy@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
serde_json = "1"
thiserror = "1"

[dev-dependencies]
criterion = "0.3"
serde = { version = "1", features = [ "derive" ] }

[[bench]]
name = "messy_json_benches"
path = "src/benches/mod.rs"
harness = false
