[package]
name = "messy_json"
version = "0.2.3"
authors = ["Francis Le Roy <francis.leroy@protonmail.ch>"]
edition = "2018"
keywords = ["serde", "json", "dynamic"]
description = "JSON Parser for dynamically structured documents"
repository = "https://github.com/basiliqio/messy_json"
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
uuid = ["feat_uuid"]

[dependencies]
serde = "1"
serde_json = "1"
itertools = "0.10.0"
feat_uuid = { package = "uuid", version = "0.8", features = [ "v4", "serde" ], optional = true }
arcstr = { version = "1", features = [ "std", "serde" ] }

[dev-dependencies]
criterion = { version = "0.3.4", features = [ "html_reports", "cargo_bench_support" ] }
serde = { version = "1", features = [ "derive" ] }
doc-comment = "0.3.3"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-check", "run-cargo-fmt"]

# TODO : Use `bumpalo` for greater performance while deserializing

[[bench]]
name = "messy_json_benches"
path = "src/benches/mod.rs"
harness = false
